--- a/pageForAssignment.html
+++ b/pageForAssignment.html
@@ -4,8 +4,8 @@
 <head>
 </head>
 <body>
-<script src="D:\LMS JS with React JS\day4\1.assignment.js"></script>
-<script src="D:\LMS JS with React JS\day4\2.assignment.js"></script>
-
+<script src="D:\LMS JS with React JS\day5\2.assignment.js"></script>
+<script src="D:\LMS JS with React JS\day5\3.asssignment.js"></script>
+<script src="D:\LMS JS with React JS\day5\4.assignment.js"></script>
 </body>
 </html>
