testing git push

--- a/day5/pageForAssignment.html
+++ b/day5/pageForAssignment.html
@@ -4,7 +4,7 @@
 <head>
 </head>
 <body>
-<script src="D:\LMS JS with React JS\day5\2.assignment.js"></script>
+<!-- <script src="D:\LMS JS with React JS\day5\2.assignment.js"></script> -->
 <script src="D:\LMS JS with React JS\day5\3.asssignment.js"></script>
 <script src="D:\LMS JS with React JS\day5\4.assignment.js"></script>
 </body>
