--- a/day7 object and cloning/pageForAssignment.html
+++ b/day7 object and cloning/pageForAssignment.html
@@ -4,13 +4,13 @@
 <head>
 </head>
 <body>
-<script src="D:\older repository\ReactJSTrainging\day7 object and cloning\1.assignment.js"></script>
-<script src="D:\older repository\ReactJSTrainging\day7 object and cloning\2.assignment.js"></script> 
-<script src="D:\older repository\ReactJSTrainging\day7 object and cloning\JS fandamentals Assignments"></script>
-<script src="D:\older repository\ReactJSTrainging\day7 object and cloning\JS fandamentals Assignment 2.js"></script>
-<script src="D:\older repository\ReactJSTrainging\day7 object and cloning\JS fandamentals Assignment 3.js"></script>
-<script src="D:\older repository\ReactJSTrainging\day7 object and cloning\JS fandamentals Assignment 4.js"></script>
-<script src="D:\older repository\ReactJSTrainging\day7 object and cloning\JS fandamentals Assignment 5.js"></script>
+<!-- <script src="D:\older repository\ReactJSTrainging\day7 object and cloning\1.assignment.js"></script> -->
+<!-- <script src="D:\older repository\ReactJSTrainging\day7 object and cloning\2.assignment.js"></script>  -->
+<script src="D:\older repository\ReactJSTrainging\day7 object and cloning\JS fandamentals Assignment 1"></script>
+<!-- <script src="D:\older repository\ReactJSTrainging\day7 object and cloning\JS fandamentals Assignment 2.js"></script> -->
+<!-- <script src="D:\older repository\ReactJSTrainging\day7 object and cloning\JS fandamentals Assignment 3.js"></script> -->
+<!-- <script src="D:\older repository\ReactJSTrainging\day7 object and cloning\JS fandamentals Assignment 4.js"></script> -->
+<!-- <script src="D:\older repository\ReactJSTrainging\day7 object and cloning\JS fandamentals Assignment 5.js"></script> -->
 
 </body>
 </html>
